# spark-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
config/: env.server.example  env.server.hardening.example  env.unified.staging.example  release.env.example
deploy/: IMGPROXY_ROLLOUT_COMMANDS.md  check-imgproxy-env.sh  imgproxy.env.example  karyra-imgproxy.service.example
docs/: ADMIN_API.md  ADMIN_AUDIT.md  ADMIN_AUDIT_OBSERVABILITY_RUNBOOK.md  ADMIN_ML_MODERATION.md  ADMIN_MODERATION.md  ADMIN_MODERATION_OPS.md  ADMIN_MODERATION_REPORT_LIFECYCLE_SMOKE.md  ADMIN_RBAC_FOUNDATION.md  AI_MODERATION_RUNTIME_FOUNDATION.md  AUTH_REGISTRATION_READINESS.md  CLOUDFLARE_R2_MEDIA_RUNTIME.md  CONTENT_POLICY_AND_MODERATION_FOUNDATION.md  CONTENT_POLICY_RUNTIME_RULES_RATE_LIMITS_MEDIA.md  CURRENT_STATE.md  LIVE_DEPLOYMENT.md  MINIO_HOST_NATIVE_DEPLOY.md  MINIO_NO_SUBDOMAIN_DEPLOY.md  PARTICIPATION_LAYER_SPEC.md  PASS-55-unified-frontend-env.md  PASS-56-provider-managed-https.md  PASS_25E_AA2_ADMIN_EMAIL_TEMPLATE_POLISH.md  PASS_25E_AA3_INVITE_CODE_ONBOARDING_CLARITY.md  PASS_25E_AA_ADMIN_INVITE_GMAIL_DELIVERY.md  PASS_25E_A_ADMIN_INVITE_ONLY.md  PASS_25E_C_ADMIN_INVITE_ONBOARDING.md  PASS_25E_L_ADMIN_RECOVERY_EXECUTION_LOCK.md  PASS_25E_M_ADMIN_RECOVERY_ARTIFACTS.md  PASS_25E_N_ADMIN_RECOVERY_INTAKE.md  PASS_25E_O_ADMIN_PASSWORD_RECOVERY.md  PASS_25E_P_ADMIN_RECOVERY_COMPLETION_FINALIZATION.md  PASS_25E_Q_ADMIN_RECOVERY_CHAIN_AUDIT.md  PASS_25E_R_ADMIN_2FA_RECOVERY_ROTATION_LOCK.md  PASS_25E_S_ADMIN_2FA_RECOVERY_ROTATION_FLOW.md  PASS_25E_T_ADMIN_EMAIL_RECOVERY_LOCK.md  (+19 more)
src/: ai.rs  (+26 more)
(+157 files in other folders)
