[package]
name = "spark-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
